@@ -213,6 +213,7 @@ Please visit http://aegisub.net to download latest version
 - Implemented sorting of subtitles by start time. (AMZ)
 - Recovered subtitle files are now saved in their own subfolder (customizeable in config.dat). (AMZ)
 - Fixed crash with changing font properties via the subtitle edit box when there was a \fs override tag earlier in the line. (AMZ)
+- Hotkey editor was moved inside the options dialog. (AMZ)
 
 
 = 1.09 beta - 2006.01.16 ===========================
